--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Pinteresting</a>
+      <a class="navbar-brand" href="#">KrisCraft</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,6 +18,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", about_path %></li>
+         <li><%= link_to "Products", products_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
