Added Customizations and colors

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,5 @@
+$body-bg:        #7f8c8d;
+$navbar-default-bg:  #7f8c8d;
+$navbar-default-link-color: white;
+$jumbotron-bg:  #ecf0f1;
 @import 'bootstrap';
