--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,20 @@
-$body-bg:        #7f8c8d;
-$navbar-default-bg:  #7f8c8d;
-$navbar-default-link-color: white;
-$jumbotron-bg:  #ecf0f1;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:       							 #ecf0f1;
+$font-family-sans-serif:       'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:								 45px;
+$navbar-default-bg:  					 white;
+$navbar-default-link-color:    #c0392b;
+$brand-primary:								 #c0392b;
+$jumbotron-bg:  							 white;
+
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
+
