--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-	<h1>Welcome to KrisCraft</h1>
+	<h1>Welcome to Pinaviation</h1>
 	<p>
 		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>  
 		<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
