--- a/app/views/pages/products.html.erb
+++ b/app/views/pages/products.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
 <h1>Products</h1>
-<p>KrisCraft Products Are Revolutionary</p>
+<p>Pinaviation products under development</p>
 </div>
