--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", about_path %></li>
-         <li><%= link_to "Products", products_path %></li>
+         <li><%= link_to "MyPins", pins_path %></li>
          <% if user_signed_in? %>
          <li><%= link_to 'New Pin', new_pin_path %></li>
          <li><%= link_to "Account Settings", edit_user_registration_path %></li>
