Changed all Glyphicons

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,9 +15,21 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-         <li><%= link_to "About", about_path %></li>
-         <li><%= link_to "MyPins", pins_path %></li>
+        <li>
+          <%= link_to root_path do %>
+            <span class="glyphicon glyphicon-home"></span> Home
+            <% end %>
+        </li>
+         <li>
+          <%= link_to about_path do %>
+            <span class="glyphicon glyphicon-record"></span> About
+            <% end %>
+        </li>
+         <li>
+          <%= link_to  pins_path do %>
+          <span class="glyphicon glyphicon-plane"></span> My Pins
+            <% end %>
+        </li>
          <% if user_signed_in? %>
          
          
@@ -28,8 +40,16 @@
           </li>
 
 
-         <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :get %></li>
+         <li>
+          <%= link_to edit_user_registration_path do %>
+          <span class="glyphicon glyphicon-user"></span> Settings
+            <% end %>
+        </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :get do  %>
+            <span class="glyphicon glyphicon-off"></span> Log Out
+            <% end %>
+          </li>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
