Changed Root so pins display on home page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,11 @@
             <% end %>
           </li>
         <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+          <li>
+            <%= link_to new_user_session_path do %>
+            <span class="glyphicon glyphicon-user"></span> Sign In
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
