--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         
       </button>
-      <%= link_to "PinAviation", root_path, class: "navbar-brand" %>
+      <%= link_to "Hackdemo", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,7 +27,7 @@
         </li>
          <li>
           <%= link_to  pins_path do %>
-          <span class="glyphicon glyphicon-plane"></span> My Pins
+          <span class="glyphicon glyphicon-ok"></span> My Hacks
             <% end %>
         </li>
          <% if user_signed_in? %>
