--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
 <h1>About us</h1>
-<p>Pinaviation is proud to be sponsored by Pilot Port - The #1 Premier Aviation Network now supporting 10,000 users</p>
+<p>Hackdemo </p>
 </div>
